Connect dbzAPI.js file to index.html

--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>DB Super Character Profile</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -13,9 +13,9 @@
 	</head>
 	<body>
 
-		<h1>Picture of the Day</h1>
-		<input type="date" name="" value="">
-		<button type="button" name="button">Get Media</button>
+		<h1>Dragon Ball Super</h1>
+		<input type="text" name="" value="">
+		<button type="button" name="button">Get Character</button>
 
 		<h2>NASA RULES</h2>
 		<iframe src="" frameborder="0"></iframe>
@@ -23,6 +23,8 @@
 		<h3>Explanation</h3>
 		
 
+		<script type="text/javascript" src="js/dbzAPI.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
+		
 	</body>
 </html>
