Change name of data file to dbsData.js

--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>DB Super Character Profile</title>
+		<title>DBS Character Profile</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -17,13 +17,12 @@
 		<input type="text" name="" value="">
 		<button type="button" name="button">Get Character</button>
 
-		<h2>NASA RULES</h2>
-		<iframe src="" frameborder="0"></iframe>
-		<img src="img/pokemon.jpeg" alt="">
-		<h3>Explanation</h3>
+		<h2></h2>
+		<img src="assets/android17.png" alt="">
+		<h3></h3>
 		
 
-		<script type="text/javascript" src="js/dbzAPI.js"></script>
+		<script type="text/javascript" src="js/dbsData.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 		
 	</body>
