Add images to assets folder

--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -12,13 +12,16 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-
-		<h1>Dragon Ball Super</h1>
+		<section>
+			<img src="assets/dragonballLogo.png" alt="dbs logo" id="logo">
+		</section>
+		
+		<!-- <h1>Dragon Ball Super</h1>
 		<input type="text" name="" value="">
-		<button type="button" name="button">Get Character</button>
+		<button type="button" name="button">Get Character</button> -->
 
 		<h2></h2>
-		<img src="assets/android17.png" alt="">
+		<img src="" alt="">
 		<h3></h3>
 		
 
