--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -12,17 +12,20 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<section>
-			<img src="assets/dragonballLogo.png" alt="dbs logo" id="logo">
+		<section id="allContent">
+			<section>
+				<img src="assets/dragonballLogo.png" alt="dbs logo" id="logo">
+			</section>
+			
+			<!-- <h1>Dragon Ball Super</h1>
+			<input type="text" name="" value="">
+			<button type="button" name="button">Get Character</button> -->
+	
+			<h2></h2>
+			<img src="" alt="">
+			<h3></h3>
 		</section>
 		
-		<!-- <h1>Dragon Ball Super</h1>
-		<input type="text" name="" value="">
-		<button type="button" name="button">Get Character</button> -->
-
-		<h2></h2>
-		<img src="" alt="">
-		<h3></h3>
 		
 
 		<script type="text/javascript" src="js/dbsData.js"></script>
