Add page reload button

--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -12,11 +12,15 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
+	
 		<section id="allContent">
-			<section>
+			<header id="logoContainer">
 				<img src="assets/dragonballLogo.png" alt="dbs logo" id="logo">
+			</header>
+			<section>
+				
 			</section>
-			
+			<!-- <button onClick="window.location.reload();">REFRESH</button> -->
 			<!-- <h1>Dragon Ball Super</h1>
 			<input type="text" name="" value="">
 			<button type="button" name="button">Get Character</button> -->
