Add drop down menu

--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -14,13 +14,17 @@
 	<body>
 	
 		<section id="allContent">
-			<header id="logoContainer">
+			<section id="logoContainer">
 				<img src="assets/dragonballLogo.png" alt="dbs logo" id="logo">
-			</header>
-			<section>
-				
 			</section>
-			<!-- <button onClick="window.location.reload();">REFRESH</button> -->
+			<section class="charListContainer">
+				<section id="charList">
+					<select class="characters">
+						<option value="starter" selected>CHOOSE YOUR CHARACTER</option>
+					</select>
+				</section>
+			</section>
+			
 			<!-- <h1>Dragon Ball Super</h1>
 			<input type="text" name="" value="">
 			<button type="button" name="button">Get Character</button> -->
