Create function to populate drop down

--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -25,13 +25,12 @@
 				</section>
 			</section>
 			
-			<!-- <h1>Dragon Ball Super</h1>
-			<input type="text" name="" value="">
-			<button type="button" name="button">Get Character</button> -->
-	
-			<h2></h2>
-			<img src="" alt="">
-			<h3></h3>
+			<section>
+				<h2></h2>
+				<img src="" alt="">
+				<h3></h3>
+			</section>
+		
 		</section>
 		
 		
