--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -24,24 +24,18 @@
 					</select>
 				</section>
 			</section>
-			<section>
-				<section class="item">
-					<section class="imageContainer">
-						<img src="" alt="" id="charImg">
-					</section>
-					<section class="modalContainer" id="modalContain">
-						<section class="modal">
+			<section class="modalAll">
+				<section class="modalImage">
+					<img src="" alt="" id="charImg">
+				</section>
+				<section class="modalContainer" id="modalContain">
+					<section class="modal">
 							<h1>Goku</h1>
 							<p>Goku, born Kakarot, is a male Saiyan and the main protagonist of the Dragon Ball series. Goku is a Saiyan originally sent to Earth as an infant with the mission to destroy its people. However, an accident alters his memory, allowing him to grow up to become Earth's greatest defender and the informal leader of the Dragon Team. He constantly strives and trains to be the greatest warrior possible, which has kept the Earth and the universe safe from destruction many times.</p>
-						</section>
-					</section>
-				</section>
-				<section class="item">
-					<section class="factsContainer">
-						<p></p>
 					</section>
 				</section>
 			</section>
+
 			
 		
 		</section>
