--- a/dbzWebsite/api-template/index.html
+++ b/dbzWebsite/api-template/index.html
@@ -26,7 +26,7 @@
 			</section>
 			<section class="modalAll">
 				<section class="modalImage">
-					<img src="" alt="" id="charImg">
+					<img src="assets/goku.png" alt="" id="charImg">
 				</section>
 				<section class="modalContainer" id="modalContain">
 					<section class="modal">
