Add css, create change event

--- a/dbzWebsite/dbzWebsite/index.html
+++ b/dbzWebsite/dbzWebsite/index.html
@@ -12,7 +12,6 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-	
 		<section id="allContent">
 			<section id="logoContainer">
 				<img src="assets/dragonballLogo.png" alt="dbs logo" id="logo">
@@ -24,20 +23,17 @@
 					</select>
 				</section>
 			</section>
-			<section class="modalAll">
-				<section class="modalImage">
+			<section class="modalAll hide" >
+				<section class="modalImage item">
 					<img src="assets/goku.png" alt="" id="charImg">
 				</section>
-				<section class="modalContainer" id="modalContain">
+				<section class="modalContainer item" id="modalContain">
 					<section class="modal">
-							<h1>Goku</h1>
+							<h1></h1>
 							<p>Goku, born Kakarot, is a male Saiyan and the main protagonist of the Dragon Ball series. Goku is a Saiyan originally sent to Earth as an infant with the mission to destroy its people. However, an accident alters his memory, allowing him to grow up to become Earth's greatest defender and the informal leader of the Dragon Team. He constantly strives and trains to be the greatest warrior possible, which has kept the Earth and the universe safe from destruction many times.</p>
 					</section>
 				</section>
 			</section>
-
-			
-		
 		</section>
 		
 		
