Add more assets and split elements in array

--- a/dbzWebsite/dbzWebsite/index.html
+++ b/dbzWebsite/dbzWebsite/index.html
@@ -30,9 +30,9 @@
 				<section class="modalContainer" id="modalContain">
 					<section class="modal">
 							<h1></h1>
-							<h3 id="race">RACE: <span></span></h3>
-							<h3 id="bio">BIO: <span></span></h3>
-							<h3 id="abilities">ABILITIES: <span></span></h3>
+							<h3 id="race">RACE: <div></div></h3>
+							<h3 id="bio">BIO: <div></div></h3>
+							<h3 id="abilities">ABILITIES: <div></div></h3>
 					</section>
 				</section>
 			</section>
