--- a/dbzWebsite/dbzWebsite/index.html
+++ b/dbzWebsite/dbzWebsite/index.html
@@ -29,10 +29,11 @@
 				</section>
 				<section class="modalContainer" id="modalContain">
 					<section class="modal">
-							<h1></h1>
-							<h3 id="race">RACE: <div></div></h3>
-							<h3 id="bio">BIO: <div></div></h3>
-							<h3 id="abilities">ABILITIES: <div></div></h3>
+						<!-- <img id="dragonball" src="assets/dragonball.png" alt=""> -->
+						<h1></h1>
+						<h3 id="race">RACE: <div></div></h3>
+						<h3 id="bio">BIO: <div></div></h3>
+						<h3 id="abilities">ABILITIES: <div></div></h3>
 					</section>
 				</section>
 			</section>
