Add shenron dragon photo

--- a/dbzWebsite/dbzWebsite/index.html
+++ b/dbzWebsite/dbzWebsite/index.html
@@ -23,6 +23,9 @@
 					</select>
 				</section>
 			</section>
+			<section id="shenronContainer">
+				<img id='shenron' src="assets/shenron.png" alt="Shenron">
+			</section>
 			<section class="modalAll hide" >
 				<section class="modalImage">
 					<img src="assets/goku.png" alt="" id="charImg">
