--- a/TwitchBackgroundChanger/index.html
+++ b/TwitchBackgroundChanger/index.html
@@ -5,24 +5,31 @@
     	<meta name="description" content="This app helps youtubers pick the best background color for their videos">
     	<meta name="keywords" content="youtube, background, lights">
 
-		<title>Youtube Background Picker</title>
+		<title>Twitch Background Picker</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<h1>Youtube Background Picker</h1>
-		<img src="img/chair.png" alt="generic youtube gaming chair">
+		<section>
+			<h1>Switch The Twitch Mood</h1>
+			<section>
+				<h2>Remote</h2>
+				<ul>
+					<li id="purple"></li>
+					<li id="green"></li>
+					<li id="blue"></li>
+					<li id="red"></li>
+				</ul>
+			</section>
+		</section>
+		
+		<section class="images">
+			<img id="gamer" src="img/gamer.webp" alt="gamer">
+		</section>
 
-		<h2>Remote</h2>
-		<ul>
-			<li id="purple"></li>
-			<li id="green"></li>
-			<li id="blue"></li>
-			<li id="red"></li>
-		</ul>
-
+	
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
