Add fonts folder and add fonts

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -13,7 +13,7 @@
 	</head>
 	<body>
 		<header>
-			<span>Provenzano</span>
+			<span> David Provenzano</span>
 		</header>
 		<section id="mainTop">
 			<section id="leftTop">
@@ -22,7 +22,7 @@
 			</section>
 			<section id="rightTop">
 				<section id="imgContainer">
-					<img id="headshot" src="img/me.JPG" alt="">
+					<img id="headshot" src="" alt="">
 				</section>
 			</section>
 		</section>
