Add two new logos to img folder

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -13,17 +13,19 @@
 	</head>
 	<body>
 		<header>
-			<span> David Provenzano</span>
+			<section class="logoContainer">
+				<span id="logo"> David Provenzano</span>
+			</section>
 		</header>
 		<section id="mainTop">
 			<section id="leftTop">
 				<h1>Hi, I'm David Provenzano</h1>
 				<span>A Software Engineer</span>
 			</section>
-			<section id="rightTop">
+			<!-- <section id="rightTop">
 				<section id="imgContainer">
 					<img id="headshot" src="" alt="">
-				</section>
+				</section> -->
 			</section>
 		</section>
 
