Add new photos to image folder

--- a/TwitchBackgroundChanger/index.html
+++ b/TwitchBackgroundChanger/index.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<section>
+		<header>
 			<h1>Switch The Twitch Mood</h1>
 			<section>
 				<h2>Remote</h2>
@@ -23,10 +23,10 @@
 					<li id="red"></li>
 				</ul>
 			</section>
-		</section>
+		</header>
 		
-		<section class="images">
-			<img id="gamer" src="img/gamer.webp" alt="gamer">
+		<section class="chair">
+			<img src="img/chair.png" alt="gamer chair">
 		</section>
 
 	
