--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -17,8 +17,8 @@
 		</header>
 		<section id="mainTop">
 			<section id="leftTop">
-				<h1>I'm Software Engineer David Provenzano</h1>
-				<span>I am a Software Engineer</span>
+				<h1>Hi, I'm David Provenzano</h1>
+				<span>A Software Engineer</span>
 			</section>
 			<section id="rightTop">
 				<section id="imgContainer">
