Add headline text

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -13,11 +13,11 @@
 	</head>
 	<body>
 		<header>
-
+			<span>Provenzano</span>
 		</header>
 		<section id="mainTop">
 			<section id="leftTop">
-				<h1>MY NAME IS DAVID PROVENZANO</h1>
+				<h1>I'm Software Engineer David Provenzano</h1>
 				<span>I am a Software Engineer</span>
 			</section>
 			<section id="rightTop">
