Add image of myself

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -12,7 +12,20 @@
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		
+		<header>
+
+		</header>
+		<section id="mainTop">
+			<section id="leftTop">
+				<h1>MY NAME IS DAVID PROVENZANO</h1>
+				<span>I am a Software Engineer</span>
+			</section>
+			<section id="rightTop">
+				<section id="imgContainer">
+					<img src="img/me.png" alt="">
+				</section>
+			</section>
+		</section>
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
