Make size of photo smaller to make it easier to view

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -22,7 +22,7 @@
 			</section>
 			<section id="rightTop">
 				<section id="imgContainer">
-					<img src="img/me.png" alt="">
+					<img id="headshot" src="img/me.png" alt="">
 				</section>
 			</section>
 		</section>
