Add css for main picture

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -22,10 +22,10 @@
 				<h1>Hi, I'm David Provenzano</h1>
 				<span>A Software Engineer</span>
 			</section>
-			<!-- <section id="rightTop">
+			<section id="rightTop">
 				<section id="imgContainer">
-					<img id="headshot" src="" alt="">
-				</section> -->
+					<!-- <img id="headshot" src="/img/mainMe.jpg" alt=""> -->
+				</section>
 			</section>
 		</section>
 
