--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -19,12 +19,13 @@
 		</header>
 		<section id="mainTop">
 			<section id="leftTop">
-				<h1>Hi, I'm David Provenzano</h1>
-				<span>A Software Engineer</span>
+				<section id="leftTopContent">
+					<h1>Hi, I'm David Provenzano</h1>
+					<span>A Software Engineer</span>
+				</section>
 			</section>
 			<section id="rightTop">
 				<section id="imgContainer">
-					<!-- <img id="headshot" src="/img/mainMe.jpg" alt=""> -->
 				</section>
 			</section>
 		</section>
