Add nav bar and some css for it

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -6,16 +6,30 @@
     	<meta name="keywords" content="one, two, three">
 
 		<title>Title in the tab</title>
-
+		<script src="https://kit.fontawesome.com/e54bbee573.js" crossorigin="anonymous"></script>
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		
 	</head>
 	<body>
 		<header>
-			<section class="logoContainer">
-				<span id="logo"> David Provenzano</span>
-			</section>
+			<nav class="logoContainer">
+				<a href="" id="logo"> David Provenzano</a>
+				<section class="navLinks">
+					<a href="">Home</a>
+					<a href="">Services</a>
+					<a href="">Projects</a>
+					<a href="">Resume</a>
+					<a href="">Contact</a>
+				</section>
+				<section class="socialLinks">
+					<a href=""><i class="fa-brands fa-github"></i></a>
+					<a href=""><i class="fa-brands fa-twitter"></i></a>
+					<a href=""><i class="fa-solid fa-envelope"></i></a>
+					<a href=""><i class="fa-brands fa-linkedin"></i></a>
+				</section>
+			</nav>
 		</header>
 		<section id="mainTop">
 			<section id="leftTop">
@@ -24,12 +38,7 @@
 					<span>A Software Engineer</span>
 				</section>
 			</section>
-			<section id="rightTop">
-				<section id="imgContainer">
-				</section>
-			</section>
-		</section>
-
+				<a class="aboutButton" href="">About Me</a>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
