Change about me button to resume

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -18,9 +18,9 @@
 				<a href="" id="logo"> David Provenzano</a>
 				<section class="navLinks">
 					<a href="">Home</a>
+					<a href="">About Me</a>
 					<a href="">Services</a>
 					<a href="">Projects</a>
-					<a href="">Resume</a>
 					<a href="">Contact</a>
 				</section>
 				<section class="socialLinks">
@@ -37,14 +37,14 @@
 					<h1>Hi, I'm David Provenzano</h1>
 					<span>A Software Engineer</span>
 				</section>
-				<a class="aboutButton" href="">About Me</a>
+				<a class="aboutButton" href="">Resume</a>
 			</section>
 		</section>
 		<section class="aboutMe">
 			<section class="aboutContent">
 				<h2>About Me</h2>
 				<p>
-	
+				
 				</p>
 			</section>
 		</section>
