--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -37,8 +37,9 @@
 					<h1>Hi, I'm David Provenzano</h1>
 					<span>A Software Engineer</span>
 				</section>
-			</section>
 				<a class="aboutButton" href="">About Me</a>
+			</section>
+				<a class="goToTop" href="#"><i class="fa-solid fa-circle-chevron-up"></i></a>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
