Add button css and about me

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -39,7 +39,16 @@
 				</section>
 				<a class="aboutButton" href="">About Me</a>
 			</section>
-				<a class="goToTop" href="#"><i class="fa-solid fa-circle-chevron-up"></i></a>
+		</section>
+		<section class="aboutMe">
+			<section class="aboutContent">
+				<h2>About Me</h2>
+				<p>
+	
+				</p>
+			</section>
+		</section>
+		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>		
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
