Add hamburger menu

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -14,28 +14,36 @@
 	</head>
 	<body>
 		<header>
-			<nav class="logoContainer">
-				<a href="" id="logo"> David Provenzano</a>
-				<section class="navLinks">
-					<a href="">Home</a>
-					<a href="">About Me</a>
-					<a href="">Services</a>
-					<a href="">Projects</a>
-					<a href="">Contact</a>
-				</section>
-				<section class="socialLinks">
-					<a href=""><i class="fa-brands fa-github"></i></a>
-					<a href=""><i class="fa-brands fa-twitter"></i></a>
-					<a href=""><i class="fa-solid fa-envelope"></i></a>
-					<a href=""><i class="fa-brands fa-linkedin"></i></a>
+			<nav>
+				<section class="navContainer">
+					<a href="" id="logo"> David Provenzano</a>
+					<section class="navLinks">
+						<a href="" class="isActive">Home</a>
+						<a href="">About Me</a>
+						<a href="">Skills</a>
+						<a href="">Projects</a>
+						<a href="">Contact</a>
+					</section>
+					<section class="socialLinks">
+						<a href=""><i class="fa-brands fa-github"></i></a>
+						<a href=""><i class="fa-brands fa-twitter"></i></a>
+						<a href=""><i class="fa-brands fa-linkedin"></i></a>
+						<a href=""><i class="fa-solid fa-envelope"></i></a>
+					</section>
+					<button class="hamburger isActive">
+						<span></span>
+						<span></span>
+						<span></span>
+					</button>
 				</section>
 			</nav>
 		</header>
-		<section id="mainTop">
+		<!-- <section id="mainTop">
 			<section id="leftTop">
 				<section id="leftTopContent">
 					<h1>Hi, I'm David Provenzano</h1>
 					<span>A Software Engineer</span>
+					<p>Who is ready to take on any challenge</p>
 				</section>
 				<a class="aboutButton" href="">Resume</a>
 			</section>
@@ -47,7 +55,7 @@
 				
 				</p>
 			</section>
-		</section>
+		</section> -->
 		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>		
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
