--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -30,7 +30,7 @@
 						<a href=""><i class="fa-brands fa-linkedin"></i></a>
 						<a href=""><i class="fa-solid fa-envelope"></i></a>
 					</section>
-					<button class="hamburger isActive">
+					<button class="hamburger">
 						<span></span>
 						<span></span>
 						<span></span>
