Add html and original css back

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -19,7 +19,7 @@
 					<a href="" id="logo"> David Provenzano</a>
 					<section class="navLinks">
 						<a href="" class="isActive">Home</a>
-						<a href="">About Me</a>
+						<a href="">About</a>
 						<a href="">Skills</a>
 						<a href="">Projects</a>
 						<a href="">Contact</a>
@@ -38,7 +38,7 @@
 				</section>
 			</nav>
 		</header>
-		<!-- <section id="mainTop">
+		<section id="mainTop">
 			<section id="leftTop">
 				<section id="leftTopContent">
 					<h1>Hi, I'm David Provenzano</h1>
@@ -55,7 +55,7 @@
 				
 				</p>
 			</section>
-		</section> -->
+		</section>
 		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>		
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
