Add paragraph content in left top box

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -42,10 +42,9 @@
 			<section id="leftTop">
 				<section id="leftTopContent">
 					<h1>Hi, I'm David Provenzano</h1>
-					<span>A Software Engineer</span>
-					<p>Who is ready to take on any challenge</p>
+					<p>A Software Engineer who specializes in frontend and backend development. If you want to learn more about me, check out my resume.</p>
 				</section>
-				<a class="aboutButton" href="">Resume</a>
+				<a class="resumeButton" href="">Resume</a>
 			</section>
 		</section>
 		<section class="aboutMe">
