Change size of white box

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -42,7 +42,7 @@
 			<section id="leftTop">
 				<section id="leftTopContent">
 					<h1>Hi, I'm David Provenzano</h1>
-					<p>A Software Engineer who specializes in frontend and backend development. If you want to learn more about me, check out my resume.</p>
+					<p>A Software Engineer who specializes in frontend and backend development. If you want to learn more about me, check out my resume or keep scrolling for more information.</p>
 				</section>
 				<a class="resumeButton" href="">Resume</a>
 			</section>
