Change format of HTML nav

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>Title in the tab</title>
+		<title>About David Provenzano</title>
 		<script src="https://kit.fontawesome.com/e54bbee573.js" crossorigin="anonymous"></script>
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -18,8 +18,7 @@
 				<section class="navContainer">
 					<a href="" id="logo"> David Provenzano</a>
 					<section class="navLinks">
-						<a href="" class="isActive">Home</a>
-						<a href="">About</a>
+						<a href="" class="isActive">About</a>
 						<a href="">Skills</a>
 						<a href="">Projects</a>
 						<a href="">Contact</a>
@@ -42,16 +41,16 @@
 			<section id="leftTop">
 				<section id="leftTopContent">
 					<h1>Hi, I'm David Provenzano</h1>
-					<p>A Software Engineer who specializes in frontend and backend development. If you want to learn more about me, check out my resume or keep scrolling for more information.</p>
+					<p>A Software Engineer based out of Orlando, FL who specializes in frontend and backend web development. If you want to learn more about me, check out my resume below.</p>
 				</section>
 				<a class="resumeButton" href="">Resume</a>
 			</section>
 		</section>
-		<section class="aboutMe">
-			<section class="aboutContent">
-				<h2>About Me</h2>
+		<section class="skills">
+			<section class="skillsContainer">
+				<h2>My Skills</h2>
 				<p>
-				
+				I am a frontend and backend software engineer based out of Orlando, FL.
 				</p>
 			</section>
 		</section>
