--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -20,7 +20,7 @@
 					<section class="navLinks">
 						<a href="" class="isActive">About</a>
 						<a href="">Skills</a>
-						<a href="">Projects</a>
+						<a href="">Portfolio</a>
 						<a href="">Contact</a>
 					</section>
 					<section class="socialLinks">
@@ -47,10 +47,26 @@
 			</section>
 		</section>
 		<section class="skills">
+			<h2>My Skills</h2>
 			<section class="skillsContainer">
-				<h2>My Skills</h2>
+				<section class="html">
+					<img src="/img/html.png" alt="html">
+					<p></p>
+				</section>
+				<section class="css">
+					<img src="/img/css.png" alt="css">
+					<p></p>
+				</section>
+				<section class="javascript">
+					<img src="/img/js.png" alt="javascript">
+					<p></p>
+				</section>
+			</section>
+		</section>
+		<section class="projects">
+			<section class="projectsContainer">
+				<h2>My Projects</h2>
 				<p>
-				I am a frontend and backend software engineer based out of Orlando, FL.
 				</p>
 			</section>
 		</section>
