Add small blurb of skills paragraph

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -49,17 +49,15 @@
 		<section class="skills">
 			<h2>My Skills</h2>
 			<section class="skillsContainer">
+				<p>I am able to create full function web apps with my knowlege of HTML, CSS, and JavaScript</p>
 				<section class="html">
 					<img src="/img/html.png" alt="html">
-					<p></p>
 				</section>
 				<section class="css">
 					<img src="/img/css.png" alt="css">
-					<p></p>
 				</section>
 				<section class="javascript">
 					<img src="/img/js.png" alt="javascript">
-					<p></p>
 				</section>
 			</section>
 		</section>
