Made the nav bar fixed and not cover titles

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -18,10 +18,10 @@
 				<section class="navContainer">
 					<a href="" id="logo"> David Provenzano</a>
 					<section class="navLinks">
-						<a href="" class="isActive">About</a>
-						<a href="">Skills</a>
-						<a href="">Portfolio</a>
-						<a href="">Contact</a>
+						<a href="#" class="isActive">About</a>
+						<a href="#skills">Skills</a>
+						<a href="#portfolio">Portfolio</a>
+						<a href="#contact">Contact</a>
 					</section>
 					<section class="socialLinks">
 						<a href=""><i class="fa-brands fa-github"></i></a>
@@ -47,7 +47,7 @@
 			</section>
 		</section>
 		<section class="skills">
-			<h2>My Skills</h2>
+			<h2 id="skills" >My Skills</h2>
 			<section class="skillsContainer">
 				<p>I am able to create full function web apps with my knowlege of HTML, CSS, and JavaScript</p>
 				<section class="html">
@@ -61,9 +61,16 @@
 				</section>
 			</section>
 		</section>
-		<section class="projects">
-			<section class="projectsContainer">
-				<h2>My Projects</h2>
+		<section id="portfolio" class="portfolio">
+			<section class="portfolioConatiner">
+				<h2>Portfolio</h2>
+				<p>
+				</p>
+			</section>
+		</section>
+		<section id="contact" class="contact">
+			<section class="contactContent">
+				<h2>Contact</h2>
 				<p>
 				</p>
 			</section>
