Remove unwanted images and add another project folder

--- a/Portfolio Site/projects/LevelGround/index.html
+++ b/Portfolio Site/projects/LevelGround/index.html
@@ -23,7 +23,7 @@
 					<li><a href="#">CLASSES</a></li>
 					<li><a href="#">HIRE US</a></li>
 				</ul>
-				<img src="../images/LG_Logo.png" alt="Logo">
+				<img src="images/LG_Logo.png" alt="Logo">
 				<a href="#">DONATE</a>
 			</nav>
 		</header>
@@ -43,13 +43,13 @@
 		</section>
 		<section class="two-squares">
 			<section class="squares left">
-				<img src="../images/Gray_rec.png" alt="Gray Rectangle">
+				<img src="images/Gray_rec.png" alt="Gray Rectangle">
 				<h3>VISIT THE GYM</h3>
 				<p>Etiam porta sem malesuada magna mollis euismod. Duis molls, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac. vestibulum at eros</p>
 				<a href="#">SEE CLASSES</a>
 			</section>
 			<section class="squares right">
-				<img src="../images/Gray_rec.png" alt="Gray Rectangle">
+				<img src="images/Gray_rec.png" alt="Gray Rectangle">
 				<h3>HAVE US VISIT YOU</h3>
 				<p>Etiam porta sem malesuada magna mollis euismod. Duis molls, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Sed posuere consectetur est at lobortis. Morbi leo risus, porta ac consectetur ac. vestibulum at eros</p>
 				<a href="#">HIRE US</a>
