--- a/Portfolio Site/projects/HiarSalonWeb/index.html
+++ b/Portfolio Site/projects/HiarSalonWeb/index.html
@@ -16,7 +16,7 @@
 	<body>
 		<header>
 			<nav>
-				<img src="../images/salon_logo.png" alt="Ayesha Logo">
+				<img src="images/salon_logo.png" alt="Ayesha Logo">
 				<ul>
 					<li><a href="#">HOME</a></li>
 					<li><a href="#">ABOUT</a></li>
@@ -25,8 +25,8 @@
 					<li><a href="#">NEWS</a></li>
 					<li><a href="#">CONTACT</a></li>
 				</ul>
-				<i class="fa-regular fa-magnifying-glass"></i>
-				<i class="fa-regular fa-bag-shopping"></i>
+				<i class="fa-solid fa-magnifying-glass"></i>
+				<i class="fa-solid fa-bell"></i>
 			</nav>
 		</header>
 		<main>
@@ -46,17 +46,17 @@
 		</main>
 		<section class="options">
 			<section class="option beautician">
-				<img src="../images/Beauticians.png" alt="icon of beautician">
+				<img src="images/Beauticians.png" alt="icon of beautician">
 				<h3>EXPERT BEAUTICIANS</h3>
 				<p>Beauty Experts dolor sit omet semiadicing elit maecenas sa foubus mollis expo sail and beauty exten interdum</p>
 			</section>
 			<section class="option chiar">
-				<img src="../images/Services.png" alt="icon of chair">
+				<img src="images/Services.png" alt="icon of chair">
 				<h3>QUALITY SERVICES</h3>
 				<p>Hair Styling Services  sit omet semiadicing elit maecenas sa foubus mollis expo sail and beauty exten interdum</p>
 			</section>
 			<section class="option product">
-				<img src="../images/Products.png" alt="icon of hair product">
+				<img src="images/Products.png" alt="icon of hair product">
 				<h3>BEAUTY PRODUCTS</h3>
 				<p>Hair collor of Product  sit omet semiadicing elit maecenas sa foubus mollis expo sail and beauty exten interdum</p>				
 			</section>
@@ -67,25 +67,25 @@
 				<p>Hair Salon velutopot ut nisl in bendrent. Vestibulum onte ipsum ipul primis in foucibus orci luctus et ultrices posuuere cubilia Curoemil Estaim portitor, locus in loctus molestie. Libero justo uliamcorper nulla. sed locinia erat metus eget diam. Morbi volutpot lectus sit omet diam vestioos beauty products</p>
 				<a href="#">- READ MORE</a>
 			</div>
-			<img src="../images/hair 1.jpeg" alt="picture of girl getting hair done">
+			<img src="images/hair 1.jpeg" alt="picture of girl getting hair done">
 		</section>
 		<section class="stylist">
 			<section class="stylist-one all-stylist">
-				<img src="../images/stylist 1.jpeg" alt="picture of a stylist">
+				<img src="images/stylist 1.jpeg" alt="picture of a stylist">
 				<div class="stylist-box">
 					<h5>ALITA WILLIMS</h5>
 					<span>- COLOURIST</span>
 				</div>
 			</section>
 			<section class="stylist-two all-stylist">
-				<img src="../images/stylist 2.jpeg" alt="picture of a stylist">
+				<img src="images/stylist 2.jpeg" alt="picture of a stylist">
 				<div class="stylist-box">
 					<h5>AYESHA LAKE</h5>
 					<span>- STYLER</span>
 				</div>
 			</section>
 			<section class="stylist-three all-stylist">
-				<img src="../images/stylist 3.jpeg" alt="picture of a stylist">
+				<img src="images/stylist 3.jpeg" alt="picture of a stylist">
 				<div class="stylist-box">
 					<h5>SMITH MICHELLE</h5>
 					<span>- BEAUTICIAN</span>
