Change overlay transparency for contact section

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -73,6 +73,9 @@
 				</p>
 			</section>
 		</section>
+		<footer>
+			
+		</footer>
 		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>		
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
