Add content for contact section

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -68,13 +68,19 @@
 		</section>
 		<section id="contact" class="contact">
 			<section class="contactContent">
-				<h2>Contact</h2>
-				<p>
-				</p>
+				<h2>Get In Touch</h2>
+				<p>If you have any questions or just want to say hi, click the button and I'll get back to you asap!</p>
+				<a class="contactButton" href="">Say Hello</a>
 			</section>
 		</section>
 		<footer>
-			
+			<span>Designed & Built by David Provenzano</span>
+			<section class="footerLinks">
+				<a href=""><i class="fa-brands fa-github"></i></a>
+				<a href=""><i class="fa-brands fa-twitter"></i></a>
+				<a href=""><i class="fa-brands fa-linkedin"></i></a>
+				<a href=""><i class="fa-solid fa-envelope"></i></a>
+			</section>
 		</footer>
 		<a class="goToTop" href="#"><i id="toTopBtn" class="fa-solid fa-circle-chevron-up"></i></a>		
 		<script type="text/javascript" src="js/main.js"></script>
