Finish contact section of website

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -21,7 +21,7 @@
 						<a href="#" class="isActive">About</a>
 						<a href="#skills">Skills</a>
 						<a href="#portfolio">Portfolio</a>
-						<a href="#contact">Contact</a>
+						<a href="#contactContainer">Contact</a>
 					</section>
 					<section class="socialLinks">
 						<a href=""><i class="fa-brands fa-github"></i></a>
@@ -66,10 +66,12 @@
 				</p>
 			</section>
 		</section>
-		<section id="contact" class="contact">
-			<section class="contactContent">
-				<h2>Get In Touch</h2>
-				<p>If you have any questions or just want to say hi, click the button and I'll get back to you asap!</p>
+		<section id="contactContainer" class="mainContact">
+			<section class="contact">
+				<section class="contactContent">
+					<h2>Get In Touch</h2>
+					<p>If you have any questions or just want to say hi, click the button below and I'll get back to you as soon as possible!</p>
+				</section>
 				<a class="contactButton" href="">Say Hello</a>
 			</section>
 		</section>
