Start portfolio section

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -41,9 +41,10 @@
 			<section id="leftTop">
 				<section id="leftTopContent">
 					<h1>Hi, I'm David Provenzano</h1>
-					<p>A Software Engineer based out of Orlando, FL who specializes in frontend and backend web development. If you want to learn more about me, check out my resume below.</p>
+					<span>A Software Engineer</span>
+					<p>based out of Orlando, FL who specializes in frontend and backend web development. If you want to learn more about me, check out my resume below.</p>
 				</section>
-				<a class="resumeButton" href="">Resume</a>
+				<a class="resumeButton" href="">&#60;resume&#62;</a>
 			</section>
 		</section>
 		<section class="skills">
@@ -62,8 +63,12 @@
 		<section id="portfolio" class="portfolio">
 			<section class="portfolioConatiner">
 				<h2>Portfolio</h2>
-				<p>
-				</p>
+				<section class="topProjects">
+
+				</section>
+				<section class="bottomProjects">
+
+				</section>
 			</section>
 		</section>
 		<section id="contactContainer" class="mainContact">
@@ -72,11 +77,11 @@
 					<h2>Get In Touch</h2>
 					<p>If you have any questions or just want to say hi, click the button below and I'll get back to you as soon as possible!</p>
 				</section>
-				<a class="contactButton" href="">Say Hello</a>
+				<a class="contactButton" href="">&#60;say hello&#62;</a>
 			</section>
 		</section>
 		<footer>
-			<span>Designed & Built by David Provenzano</span>
+			<p>Designed & Built by <span>David Provenzano<span></p>
 			<section class="footerLinks">
 				<a href=""><i class="fa-brands fa-github"></i></a>
 				<a href=""><i class="fa-brands fa-twitter"></i></a>
