Change image links for Restaurant website

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -75,9 +75,9 @@
 			<section class="contact">
 				<section class="contactContent">
 					<h2>Get In Touch</h2>
-					<p>If you have any questions or just want to say hi, click the button below and I'll get back to you as soon as possible!</p>
+					<p>If you have any questions or just want to say hi, click the button below and let's chat!</p>
 				</section>
-				<a class="contactButton" href="">&#60;say hello&#62;</a>
+				<a href="mailto:dprovenzano13@gmail.com" class="contactButton" href="">&#60;say hello&#62;</a>
 			</section>
 		</section>
 		<footer>
