--- a/Portfolio Site/projects/RestaurantWeb/index.html
+++ b/Portfolio Site/projects/RestaurantWeb/index.html
@@ -17,7 +17,7 @@
 		<div class="backgroundOne">
 			<header>
 				<nav>
-					<img src="../images/BIRD LOGO.png" alt="logo">
+					<img src="images/BIRD LOGO.png" alt="logo">
 					<ul>
 						<li><a href="#">Home</a></li>
 						<li><a href="#">About Us</a></li>
@@ -26,7 +26,7 @@
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Location</a></li>
 					</ul>
-					<i class="fa-regular fa-cart-shopping"></i>
+					<i class="fa-solid fa-cart-shopping"></i>
 					<i class="fa-solid fa-magnifying-glass"></i>
 				</nav>
 			</header>
@@ -66,10 +66,10 @@
 				<li><a href="#">Shake</a></li>
 			</ul>
 			<div class="images">
-				<img src="../images/Food 1.png" alt="">
-				<img src="../images/Food 2.png" alt="">
-				<img src="../images/Food 3.png" alt="">
-				<img src="../images/Food 4.png" alt="">
+				<img src="images/Food 1.png" alt="">
+				<img src="images/Food 2.png" alt="">
+				<img src="images/Food 3.png" alt="">
+				<img src="images/Food 4.png" alt="">
 			</div>
 		</section>
 		<section class="book">
@@ -87,7 +87,7 @@
 				<span class="time">09:00 am - 22:00 pm</span>
 			</section>
 			<section class="video">
-				<img src="../images/Fruit.jpg" alt="picture of fruit">
+				<img src="images/Fruit.jpg" alt="picture of fruit">
 				<i class="fa-solid fa-angle-left"></i>
 				<i class="fa-solid fa-play"></i>
 				<i class="fa-solid fa-angle-right"></i>
@@ -96,7 +96,7 @@
 		<section class="testimonial">
 			<h4>Testimonials</h4>
 			<h2>Customer Say</h2>
-			<img src="../images/John_smith.jpeg" alt="headshot of John Smith">
+			<img src="images/John_smith.jpeg" alt="headshot of John Smith">
 			<div class="bottom-content">
 				<h5>Mr John Smith</h5>
 				<span>Art Director</span>
