--- a/Portfolio Site/projects/SourceWeb/index.html
+++ b/Portfolio Site/projects/SourceWeb/index.html
@@ -45,7 +45,7 @@
 				<p>A device that enables collaboration will lessen the chance of work having to be completely redone.</p>
 			</section>
 			<section class="computer">
-				<img src="../images/computer-phone.png" alt="computer with a phone">
+				<img src="images/computer-phone.png" alt="computer with a phone">
 			</section>
 		</main>
 		<section class="four">
