Add gifs to portfolioolio page

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -64,10 +64,26 @@
 			<section class="portfolioConatiner">
 				<h2>Portfolio</h2>
 				<section class="topProjects">
-
+					<section class="dbz">
+						<img src="img/GIFs/DBZ.gif"></img>
+					</section>
+					<section class="dog">
+						<img src="img/GIFs/Dog.gif"></img>
+					</section>
+					<section class="source">
+						<img src="img/GIFs/Source.gif"></img>
+					</section>
 				</section>
 				<section class="bottomProjects">
-
+					<section class="restaurant">
+						<img src="img/GIFs/Restaurant.gif"></img>
+					</section>
+					<section class="quotes">
+						<img src="img/GIFs/Quotes.gif"></img>
+					</section>
+					<section class="student">
+						<img src="img/GIFs/Student.gif"></img>
+					</section>
 				</section>
 			</section>
 		</section>
