Change gifs to mp4s

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -10,10 +10,12 @@
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
 		
 	</head>
 	<body>
-		<header>
 			<nav>
 				<section class="navContainer">
 					<a href="" id="logo"> David Provenzano</a>
@@ -36,7 +38,6 @@
 					</button>
 				</section>
 			</nav>
-		</header>
 		<section id="mainTop">
 			<section id="leftTop">
 				<section id="leftTopContent">
@@ -61,31 +62,47 @@
 			</section>
 		</section>
 		<section id="portfolio" class="portfolio">
-			<section class="portfolioConatiner">
-				<h2>Portfolio</h2>
+			<h2>Portfolio</h2>
 				<section class="topProjects">
-					<section class="dbz">
-						<img src="img/GIFs/DBZ.gif"></img>
+					<section class="projects">
+						<a href="">
+							<video autoplay loop><source src="img/GIFs/DBZ.mp4"></video>
+							<span>Capsule Corp</span>
+						</a>
 					</section>
-					<section class="dog">
-						<img src="img/GIFs/Dog.gif"></img>
+					<section class="projects">
+						<a href="">
+							<video autoplay loop><source src="img/GIFs/Dog.mp4"></video>
+							<span>Dog</span>
+						</a>
 					</section>
-					<section class="source">
-						<img src="img/GIFs/Source.gif"></img>
+					<section class="projects">
+						<a href="">
+							<video autoplay loop><source src="img/GIFs/Source.mp4"></video>
+							<span>Source</span>
+						</a>
 					</section>
 				</section>
 				<section class="bottomProjects">
-					<section class="restaurant">
-						<img src="img/GIFs/Restaurant.gif"></img>
+					<section class="projects">
+						<a href="">
+							<video autoplay loop><source src="img/GIFs/Restaurant.mp4"></video>
+							<span>Capsule Corp</span>
+						</a>
 					</section>
-					<section class="quotes">
-						<img src="img/GIFs/Quotes.gif"></img>
+					<section class="projects">
+						<a href="">
+							<video autoplay loop><source src="img/GIFs/Quotes.mp4"></video>
+							<span>Dog</span>
+						</a>
 					</section>
-					<section class="student">
-						<img src="img/GIFs/Student.gif"></img>
+					<section class="projects">
+						<a href="">
+							<video autoplay loop><source src="img/GIFs/Student.mp4"></video>
+							<span>Source</span>
+						</a>
 					</section>
 				</section>
-			</section>
 		</section>
 		<section id="contactContainer" class="mainContact">
 			<section class="contact">
