Edit all titles of projects and finish portfolio section

--- a/Portfolio Site/index.html
+++ b/Portfolio Site/index.html
@@ -26,10 +26,10 @@
 						<a href="#contactContainer">Contact</a>
 					</section>
 					<section class="socialLinks">
-						<a href=""><i class="fa-brands fa-github"></i></a>
-						<a href=""><i class="fa-brands fa-twitter"></i></a>
-						<a href=""><i class="fa-brands fa-linkedin"></i></a>
-						<a href=""><i class="fa-solid fa-envelope"></i></a>
+						<a href="https://github.com/dprovenzano13" target="none"><i class="fa-brands fa-github"></i></a>
+						<a href="https://twitter.com/d_provenzano_" target="none"><i class="fa-brands fa-twitter"></i></a>
+						<a href="https://www.linkedin.com/in/dprovenzano13/" target="none"><i class="fa-brands fa-linkedin"></i></a>
+						<a href="" target="none"><i class="fa-solid fa-envelope"></i></a>
 					</section>
 					<button class="hamburger">
 						<span></span>
@@ -63,21 +63,22 @@
 		</section>
 		<section id="portfolio" class="portfolio">
 			<h2>Portfolio</h2>
+			<section class="projectsContainer">
 				<section class="topProjects">
 					<section class="projects">
-						<a href="">
+						<a href="/projects/CapsuleCorp/index.html" target="none">
 							<video autoplay loop><source src="img/GIFs/DBZ.mp4"></video>
 							<span>Capsule Corp</span>
 						</a>
 					</section>
 					<section class="projects">
-						<a href="">
+						<a href="/projects/Doggo Directory/index.html" target="none">
 							<video autoplay loop><source src="img/GIFs/Dog.mp4"></video>
-							<span>Dog</span>
+							<span>Doggo Directory</span>
 						</a>
 					</section>
 					<section class="projects">
-						<a href="">
+						<a href="/projects/SourceWeb/index.html" target="none">
 							<video autoplay loop><source src="img/GIFs/Source.mp4"></video>
 							<span>Source</span>
 						</a>
@@ -85,24 +86,25 @@
 				</section>
 				<section class="bottomProjects">
 					<section class="projects">
-						<a href="">
-							<video autoplay loop><source src="img/GIFs/Restaurant.mp4"></video>
-							<span>Capsule Corp</span>
+						<a href="/projects/RestaurantWeb/index.html" target="none">
+							<video class="restaurant" autoplay loop><source src="img/GIFs/Restaurant.mp4"></video>
+							<span>Restaurant</span>
 						</a>
 					</section>
 					<section class="projects">
-						<a href="">
+						<a href="/projects/Motivation Nation/index.html" target="none">
 							<video autoplay loop><source src="img/GIFs/Quotes.mp4"></video>
-							<span>Dog</span>
+							<span>Motivation Nation</span>
 						</a>
 					</section>
 					<section class="projects">
-						<a href="">
+						<a href="/projects/Student Search/index.html" target="none">
 							<video autoplay loop><source src="img/GIFs/Student.mp4"></video>
-							<span>Source</span>
+							<span>Student Search</span>
 						</a>
 					</section>
 				</section>
+			</section>	
 		</section>
 		<section id="contactContainer" class="mainContact">
 			<section class="contact">
@@ -110,15 +112,15 @@
 					<h2>Get In Touch</h2>
 					<p>If you have any questions or just want to say hi, click the button below and let's chat!</p>
 				</section>
-				<a href="mailto:dprovenzano13@gmail.com" class="contactButton" href="">&#60;say hello&#62;</a>
+				<a href="mailto:dprovenzano13@gmail.com" class="contactButton">&#60;say hello&#62;</a>
 			</section>
 		</section>
 		<footer>
 			<p>Designed & Built by <span>David Provenzano<span></p>
 			<section class="footerLinks">
-				<a href=""><i class="fa-brands fa-github"></i></a>
-				<a href=""><i class="fa-brands fa-twitter"></i></a>
-				<a href=""><i class="fa-brands fa-linkedin"></i></a>
+				<a href="https://github.com/dprovenzano13" target="none"><i class="fa-brands fa-github"></i></a>
+				<a href="https://twitter.com/d_provenzano_"><i class="fa-brands fa-twitter"></i></a>
+				<a href="https://www.linkedin.com/in/dprovenzano13/"><i class="fa-brands fa-linkedin"></i></a>
 				<a href=""><i class="fa-solid fa-envelope"></i></a>
 			</section>
 		</footer>
