--- a/Portfolio Site/projects/RestaurantWeb/index.html
+++ b/Portfolio Site/projects/RestaurantWeb/index.html
@@ -6,7 +6,7 @@
   	<meta name="keywords" content="one, two, three">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		
-		<title>Cuisine</title>
+		<title>Restaruant Cuisine</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
@@ -50,8 +50,10 @@
 			<section class="about">
 				<h4>About us</h4>
 				<h2>Discover Our Restaruant Story</h2>
-				<p>Cuisine is a team work of Cuisine Restaurant Cafe. we aim at promoting the foodstuff industry through the brances . we establish and through the new dishes. and integrate between different cultures. Nullam quis ante. Etiam sit amet orci egat eros faucibus tin cidunt. Dius leg. Sed fringila mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula. Sed fringila mauris sit amet nibh Donec sodales sagittis magna. Aenean commodo ligula.</p>
-				<p>Nullam quis ante. Etiam sit amet orci egat eros faucibus tin cidunt. Dius leg. Sed fringila mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
+				<section class="aboutParagraph">
+					<p>Cuisine is a team work of Cuisine Restaurant Cafe. we aim at promoting the foodstuff industry through the brances . we establish and through the new dishes. and integrate between different cultures. Nullam quis ante. Etiam sit amet orci egat eros faucibus tin cidunt. Dius leg. Sed fringila mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula. Sed fringila mauris sit amet nibh Donec sodales sagittis magna. Aenean commodo ligula.</p>
+					<p>Nullam quis ante. Etiam sit amet orci egat eros faucibus tin cidunt. Dius leg. Sed fringila mauris sit amet nibh. Donec sodales sagittis magna. Aenean commodo ligula.</p>
+				</section>
 				<a href="#">Discover Menu</a>
 			</section>
 		</div>
