--- a/Portfolio Site/projects/CapsuleCorp/index.html
+++ b/Portfolio Site/projects/CapsuleCorp/index.html
@@ -5,7 +5,7 @@
     	<meta name="description" content="This is where your description goes">
     	<meta name="keywords" content="one, two, three">
 
-		<title>DBS Character Profile</title>
+		<title>Capsule Corp Bio Matrix</title>
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
